--- a/assessment/pom.xml
+++ b/assessment/pom.xml
@@ -39,6 +39,17 @@
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
+
+          <configuration>
+              <archive>
+                  <index>true</index>
+                  <manifest>
+                      <mainClass>ibf.assessment.Main</mainClass>
+                  </manifest>
+              </archive>
+          </configuration>
+
+
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
